--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "primerocomer",
-  "displayName": "primerocomer"
+  "name": "SushibyJhonysFood",
+  "displayName": "Sushiby Jhonys Food"
 }
